# awesome-blog

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/css/: index.css
tailwind/: base.css  package-lock.json  package.json  tailwind.config.js
templates/: base.html  home.html  posts.html
