[package]
name = "awesome-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version="0.12.0", features=["markdown", "with-axum" ]}
askama_axum = "0.3.0"
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
postgrest = "1.5.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = {version = "0.4", features=["full"]}
